syntax = "proto3";

package user;

service UserService {
  rpc GetUserInfo (FindUserId) returns (User) {}
}

message User {
  string id = 1;
  string name = 2;
}

message FindUserId {
  string id = 1;
}
